[package]
name = "suffix_arrays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "suffix_arrays"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
crossbeam = "0.7.0"
filebuffer = "0.4"
sentencepiece = "0.11.1"
serde = {version = "^1.0", features = ["derive"] } 
serde_json = "1.0.103"
indicatif = "0.17.5"
clap = { version = "4.4.6", features = ["derive"] }
